syntax = "proto3";

// The KV store service definition.
service KVStore {
  rpc Get (GetReq) returns (GetRes) {}
  rpc Put (PutReq) returns (PutRes) {}
}

message GetReq {
  string key = 1;
}

message GetRes {
    string val = 1;
    Error err = 2;
}

message PutReq {
  string key = 1;
  string val = 2;
}

message PutRes {
  Error err = 1;
}

message Error {

  enum Type {
    NO_ERROR = 0;
    KEY_NOT_FOUND = 1;
  }

  Type type = 1;
  string message = 2;

}
